fixed horizontal scroll bar issue

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -500,7 +500,7 @@ a {
 
 @media (max-width: 650px) {
     body, html {
-        overflow-x: hidden;
+        overflow-x: hidden !important;
         //position: fixed;
     }
 
@@ -508,7 +508,7 @@ a {
         display: block;
         z-index: 50000000;
     }
-
+    
     .container--nav > #nav__list {
         position: absolute;
         right: 0;
